# Order-management-service

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  redis.conf
docker/: Dockerfile  Dockerfile-alembic
docker/dev/: main.yml
migrations/: env.py
migrations/versions/: 2025_12_17_16_09-4e45f0a0551c_added_user_table.py  2025_12_17_20_09-f9d500569def_added_order_table.py
src/: main.py  settings.py
src/api/: auth.py  cache.py  celery_worker.py  schemas.py
src/api/db_requests/: db_requests_order.py  db_requests_user.py
src/api/pydantic_models/: order_models.py  user_models.py
src/api/routers/: check_router.py  main_router.py  order_router.py  user_router.py
src/connectors/: celery_conf.py  kafka.py  orm.py  redis_db.py
src/db_models/: db_base.py  db_models.py
